--- a/ogt_info_session_form.html
+++ b/ogt_info_session_form.html
@@ -281,7 +281,7 @@
                             </select>
                         </td>
                         <td>
-                            <select class="form-control" id="event" name="00N70000002UFkc" title="大專院校">
+                            <select class="form-control" id="event" name="Campaign_ID" title="Campaign_ID">
                                 <option selected="selected">選擇說明會場次</option>
 
                             </select>
