--- a/indexFAQ.html
+++ b/indexFAQ.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="section-grbacolor">
+<body class="section-whbacolor">
 
     <div class="col-lg-6 flaot_lf">
         <div class="accordion fontsize">
