--- a/OutGoing Volunnter.html
+++ b/OutGoing Volunnter.html
@@ -193,8 +193,8 @@
             <div>
             </div>
         </div>
-
     </div>
+
     <!-- 可以從海外實習獲得什麼-->
     <section id="services" class="section-whbacolor why-choose-text">
         <div class="container">
@@ -254,10 +254,10 @@
             </div>
         </div>
     </section>
-    
-    
+
+
     <!-- AIESEC所提供的-->
-    <section class="section-grbacolor">
+    <section id="prepare" class="section-grbacolor">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -340,9 +340,11 @@
                         <img src="img/apply_flow_01.png" class="fas fa-4x text-primary mb-3 ogv_applyimg">
                     </div>
                     <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">良好的學習環境</h3>
+                        <h3 class="mb-3">立即報名海外成長</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">設定明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                        <a href="recruitment_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=650,toolbar=1,resizable=0'); return false;">
+                            <buttom class="btn btn-primary">報名寒假海外成長</buttom>
+                        </a>
                     </div>
                 </div>
 
@@ -351,9 +353,11 @@
                         <img src="img/apply_flow_02.png" class="fas fa-4x text-primary mb-3 ogv_applyimg">
                     </div>
                     <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">清楚的工作說明</h3>
+                        <h3 class="mb-3">報名校園說明會</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們將陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
+                        <a href="recruitment_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=650,toolbar=1,resizable=0'); return false;">
+                            <buttom class="btn btn-primary">填寫報名表單</buttom>
+                        </a>
                     </div>
                 </div>
             </div>
