--- a/ogt_info_session_form.html
+++ b/ogt_info_session_form.html
@@ -18,7 +18,7 @@
     <div class="row mt-5">
         <div class="container">
                                     <div class="text-center">
-                        <h3 class="m-3">報名海外青創說明會</h3>
+                        <h3 class="m-3">報名海外實習說明會</h3>
                         </div>
             <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" name="gip_form">
                 <table class="table table-borderless fixed">
