--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -179,8 +179,9 @@
             <div>
             </div>
         </div>
-
     </div>
+
+
     <!-- 可以從海外實習獲得什麼-->
     <section id="services" class="section-whbacolor why-choose-text">
         <div class="container">
@@ -239,9 +240,11 @@
                 </div>
             </div>
         </div>
+    </section>
 
-        <!-- AIESEC所會提供的-->
-        <div class="section-grbacolor">
+
+    <!-- AIESEC所會提供的-->
+    <section id="prepare" class="section-grbacolor">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -298,21 +301,57 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
-    <div class="text-center section-whbacolor">
 
+    <div class="text-center section-whbacolor">
         <div class="col-lg-12 text-center">
             <br><br>
             <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.3s">如何參與專案</p>
-
         </div>
-        <img src="img/process2.png" class="howto">
+        <div class="wow fadeIn" data-wow-duration="1.5s" data-wow-delay="0.7s">
+            <img src="img/process2.png" class="howto mb-5">
+        </div>
     </div>
-    <br><br><br><br><br>
+    <!--      立即報名-->
+    <section class="section-grbacolor">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.5s">報名開始您的旅程</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/apply_flow_02.png" class="fas fa-4x text-primary mb-3 oge_applyimg">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">立即報名海外青創</h3>
+                        <hr class="gray">
+                        <a class="js-scroll-trigger" href="#apply">
+                            <buttom class="btn btn-primary">報名海外青創</buttom>
+                        </a>
+                    </div>
+                </div>
 
-    <section id="faq" class=" section-grbacolor">
+                <div class="col-lg-6 text-center">
+                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                        <img src="img/apply_flow_01.png" class="fas fa-4x text-primary mb-3 oge_applyimg">
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3">報名校園說明會</h3>
+                        <hr class="gray">
+                        <a href="oge_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=700,toolbar=1,resizable=0'); return false;">
+                            <buttom class="btn btn-primary">報名海外青創說明會</buttom>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="faq" class=" section-whbacolor">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -329,12 +368,12 @@
                 <div class="col-lg-12 text-center">
                     <p class="section-heading wow fadeInDown section-title">報名開始您的旅程</p>
                 </div>
-                <iframe src="oge_info_session_form.html" width="100%" height="600px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="oge_regist_form.html" width="100%" height="650px" frameborder="0" scrolling="yes"></iframe>
             </div>
         </div>
     </section>
     <!-- The content of your page would go here. -->
-   <footer class="footer-distributed" id=contact>
+    <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
@@ -413,6 +452,7 @@
     <script src="js/creative.min.js"></script>
     <script>
         new WOW().init();
+
     </script>
     <script>
         var Airtable = require('airtable');
@@ -433,9 +473,12 @@
                 `<a>${record.fields.oge_data_info}</a>`
             );
         });
+
     </script>
 
 
 
 
-</body></html>
+</body>
+
+</html>
