--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -130,7 +130,7 @@
 
             </div>
 
-            <div class="container value wow bounce mb-0" data-wow-iteration="3">
+            <div class="container value wow bounce mb-0 mobile-hidden" data-wow-iteration="3">
                 <a class="fas fa-angle-down fa-3x js-scroll-trigger value" href="#video" style="color:rgb(255,255,255,0.7)"></a>
             </div>
         </div>
