--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -85,7 +85,7 @@
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
                             <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
-                            <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a> </div>
+                            <a href="incomingTalent.html" class="collapse-font">全球人才實習</a> </div>
                     </div>
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
