--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -45,7 +45,7 @@
 
 <body id="page-top">
 
-    <!-- Navigation -->
+ 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -99,8 +99,8 @@
         </div>
     </nav>
     <!--  header  -->
-    <header class="igvlanding text-center text-white d-flex">
-        <div class="container-igv my-auto">
+    <header class="igvlanding text-center text-white d-flex mobile-hidden">
+        <div class="container-igv my-auto ">
             <div class="row">
 
                 <div class="col-lg-12">
@@ -135,6 +135,9 @@
             </div>
         </div>
     </header>
+    
+    <img class="igv-img-landing pc-hidden" src="img/igvheader.jpg">
+    
 
     <section id="video" class="section-video">
         <div class="container-igv">
@@ -399,6 +402,7 @@
 
 
 
+<!--
     <div id=project class="section-applybacolor wow fadeIn" style="animation-duration: 1s" data-wow-delay="0.5s">
         <div class="wrapper">
             <div class="tabs">
@@ -422,6 +426,7 @@
             </div>
         </div>
     </div>
+-->
 
 
     <!-- 一開始即執行javascript的 init() function -->
@@ -431,7 +436,7 @@
             <div class="container">
                 <form enctype="text/plain" accept-charset="utf-8">
                       <div class="col-lg-12 text-center">
-                    <p class="section-heading wow fadeInDown section-title">聯絡我們</p>
+                    <p class="section-heading wow fadeInDown section-title m-5">聯絡我們</p>
                 </div>
                     <table class="table table-borderless fixed rwd-table">
 
