--- a/oge_info_session_form.html
+++ b/oge_info_session_form.html
@@ -322,7 +322,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <script>
-        jQuery.get("https://auth.aiesec.org.tw/?entry=campaignInfos&type=ge", function(data) {
+        jQuery.get("https://auth.aiesec.org.tw/?entry=campaignInfos&type=gt", function(data) {
 
 
 
