--- a/ogv_regist_form.html
+++ b/ogv_regist_form.html
@@ -20,7 +20,7 @@
 
 
 
-            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
+            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="regform" id="ogv-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
 
 
 
