--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -625,7 +625,7 @@
                 `<a>${record.fields.igv_data_title}</a>`
             );
             $('#info-igv').append(
-                `<a>${record.fields.igv_data_info}</a>`
+                `<a class="mobile-hidden">${record.fields.igv_data_info}</a>`
             );
         });
     </script>
