--- a/OutGoing Volunnter.html
+++ b/OutGoing Volunnter.html
@@ -489,7 +489,7 @@
                 `<a>${record.fields.ogv_data_title}</a>`
             );
             $('#info-ogv').append(
-                `<a class="mb-5">${record.fields.ogv_data_info}</a>`
+                `<a class="mb-5 mobile-hidden">${record.fields.ogv_data_info}</a>`
             );
         });
 
