--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -87,7 +87,7 @@
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
                             <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
-                            <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a>
+                            <a href="incomingTalent.html" class="collapse-font">全球人才實習</a>
                         </div>
                     </div>
                     <li class="nav-item dropdown">
@@ -470,7 +470,7 @@
                 `<a>${record.fields.oge_data_title}</a>`
             );
             $('#info-oge').append(
-                `<a>${record.fields.oge_data_info}</a>`
+                `<a class="mobile-hidden">${record.fields.oge_data_info}</a>`
             );
         });
 
