--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -474,7 +474,7 @@
                 `<a>${record.fields.ogt_data_title}</a>`
             );
             $('#info-ogt').append(
-                `<a>${record.fields.ogt_data_info}</a>`
+                `<a class="mobile-hidden">${record.fields.ogt_data_info}</a>`
             );
         });
     </script>
