--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -484,7 +484,7 @@
                 `<a>${record.fields.igt_data_title}</a>`
             );
             $('#info-igt').append(
-                `<a>${record.fields.igt_data_info}</a>`
+                `<a class="mobile-hidden">${record.fields.igt_data_info}</a>`
             );
         });
 
