--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -342,7 +342,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">報名校園說明會</h3>
                         <hr class="gray">
-                        <a href="oge_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=700,toolbar=1,resizable=0'); return false;">
+                        <a href="oge_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=650px,height=700px,toolbar=1,resizable=0'); return false;">
                             <buttom class="btn btn-primary">報名海外青創說明會</buttom>
                         </a>
                     </div>
