--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -340,7 +340,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">報名校園說明會</h3>
                         <hr class="gray">
-                        <a href="ogt_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=650,toolbar=1,resizable=0'); return false;">
+                        <a href="ogt_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=650px,height=700px,toolbar=1,resizable=0'); return false;">
                             <buttom class="btn btn-primary">報名海外實習說明會</buttom>
                         </a>
                     </div>
