0908 updated form 3.0 final

--- a/ogt_regist_form.html
+++ b/ogt_regist_form.html
@@ -19,7 +19,7 @@
         <div class="container">
 
 
-            <form action="auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="ogt-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
+            <form action="https://auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="ogt-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
 
 
 
