--- a/ogv_regist_form.html
+++ b/ogv_regist_form.html
@@ -20,7 +20,7 @@
 
 
 
-            <form action="auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="ogv-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
+            <form action="https://auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="ogv-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
 
 
 
