--- a/oge_regist_form.html
+++ b/oge_regist_form.html
@@ -19,7 +19,7 @@
         <div class="container">
 
 
-            <form action="auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
+            <form action="https://auth.aiesec.org.tw/?entry=register" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
 
 
                 <table class="table table-borderless fixed">
