--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -104,9 +104,11 @@
         <div class="container my-auto">
             <div class="row" style="margin-top:10%; margin-bottom: 0%">
                 <div class="col-lg-12">
+                   <br><br><br><br><br class="pc-hidden"><br class="pc-hidden"><br class="pc-hidden">
                     <h1 class="text-uppercase animated zoomIn header-font fontsize" style="animation-duration: 1s;animation-delay: 0.5s" id="title-ogt">
 
                         <!--                        <strong>讓你顯得更與眾不同</strong>-->
+                        
                     </h1>
                     <br>
                 </div>
