--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -111,7 +111,7 @@
                 
                     <h1 class="text-uppercase animated zoomIn header-font fontsize" style="animation-duration: 1s;animation-delay: 0.5s">
                         <strong>
-                            <br><br><br class="pc-hidden"><br class="pc-hidden"><br class="pc-hidden">
+<!--                            <br><br><br class="pc-hidden"><br class="pc-hidden"><br class="pc-hidden"><br class="pc-hidden"><br class="pc-hidden">-->
 
 
 
@@ -283,6 +283,7 @@
 
 
     <!-- AIESEC所會提供的-->
+<!--
     <section id="provides" class="section-whbacolor why-choose-text">
         <div class="container-igt">
             <div class="row">
@@ -339,6 +340,7 @@
             </div>
         </div>
     </section>
+-->
 
 
     <!--    聯絡我們-->
