--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -45,7 +45,7 @@
 
 <body id="page-top">
 
- 
+
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -135,15 +135,15 @@
             </div>
         </div>
     </header>
-    
+
     <img class="igv-img-landing pc-hidden" src="img/igvheader.jpg">
-    
+
 
     <section id="video" class="section-video">
         <div class="container-igv">
             <div class="row align-items-center no-gutters ">
                 <div class="col-xl-5">
-                    <img src="img/igvinfo.png" class="subheader">
+                    <img src="img/Global_Volunteer.png" class="subheader" style="display: block; margin: auto">
                 </div>
                 <div class="col-xl-7">
                     <div class="text-black-50 ">
@@ -283,6 +283,7 @@
         <div class="container-igv">
             <p class="section-heading wow fadeInDown section-title">合作流程</p>
             <div class="row mb-5">
+<!--
                 <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="0.5s">
                     <div class="service-box mt-3 mx-auto">
                         <p class="stepNum">1</p>
@@ -291,7 +292,20 @@
                         <h3 class="mb-3 five-reason-title">預約到訪時間</h3>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
-                            與專案負責人預約一小時<br>到貴組織做進一步的<br>專案說明
+                            與專案負責人預約一小時<br>到貴組織做進一步的<br>專案說明 </p>
+                    </div>
+                </div>
+-->
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="0.7s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">1</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+
+                        <h3 class="mb-3 five-reason-title">預約到訪時間</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            與專案負責人預約一小時到貴組織做進一步的專案說明 
                         </p>
                     </div>
                 </div>
@@ -402,7 +416,7 @@
 
 
 
-<!--
+    <!--
     <div id=project class="section-applybacolor wow fadeIn" style="animation-duration: 1s" data-wow-delay="0.5s">
         <div class="wrapper">
             <div class="tabs">
@@ -435,9 +449,9 @@
         <div class="row">
             <div class="container">
                 <form enctype="text/plain" accept-charset="utf-8">
-                      <div class="col-lg-12 text-center">
-                    <p class="section-heading wow fadeInDown section-title m-5">聯絡我們</p>
-                </div>
+                    <div class="col-lg-12 text-center">
+                        <p class="section-heading wow fadeInDown section-title m-5">聯絡我們</p>
+                    </div>
                     <table class="table table-borderless fixed rwd-table">
 
                         <tr>
@@ -607,6 +621,7 @@
 
     <script>
         new WOW().init();
+
     </script>
 
     <script>
@@ -628,6 +643,7 @@
                 `<a class="mobile-hidden">${record.fields.igv_data_info}</a>`
             );
         });
+
     </script>
 
     <script>
@@ -660,7 +676,10 @@
             toText.value = initTo;
             bodyText.value = initBody;
         }
+
     </script>
 
 
-</body></html>
+</body>
+
+</html>
