--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -162,7 +162,7 @@
         </div>
     </div>
     
-    <section id="video" class="section-video btn-mobile">
+    <section id="video" class="section-video btn-mobile section-grbacolor">
         <div class="container">
             <div class="row align-items-center no-gutters ">
                 <div class="col-xl-5">
