--- a/OutGoing Volunnter.html
+++ b/OutGoing Volunnter.html
@@ -402,18 +402,21 @@
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
                 ·
-                <a href="#">AIESEC</a>
+                <a href="index.html">AIESEC</a>
                 ·
-                <a href="#services">專案說明</a>
+                <a href="OutGoing%20Volunnter.html">海外成長</a>
                 ·
-                <a href="indexOGV.html">海外成長</a>
+                <a href="Outgoing%20Talent.html">海外實習</a>
                 ·
-                <a href="#">海外實習</a>
+                <a href="Outgoing%20Entrepreneur.html">海外青創</a> 
                 ·
-                <a href="indexOGE.html">海外青創</a>
+                <a href="Incoming%20Volunteer.html">全球青年在地發展</a>
+                ·
+                <a href="incomingTalent.html">全球人才實習</a>
             </p>
 
-            <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
+
+            <p class="footer-company-name">AIESEC in Taiwan &copy; 2019</p>
         </div>
 
         <div class="footer-center microfont">
