--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -172,7 +172,7 @@
                         <div class="service-box mt-5 mx-auto">
                             <h3 class="mb-3">引入有影響力的青年</h3>
                             <hr class="gray">
-                            <p class="text-muted mb-0 line-height-35 section-text">過去十年，我們已經成功讓數萬名青年，進入世界各地的企業中。從跨國企業到新創團隊，我們的青年具有商業知能、團隊能力和解決問題能力，能夠在各領域中發揮<br>所長，使企業成長。</p>
+                            <p class="text-muted mb-0 line-height-35 section-text">從跨國企業到新創團隊，我們的青年具有商業知能、團隊能力和解決問題能力，能夠在各領域中發揮<br>所長，使企業成長。</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
@@ -446,7 +446,7 @@
 
 
     <!-- The content of your page would go here. -->
-    <footer class="footer-distributed" id=contact>
+        <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
@@ -455,18 +455,21 @@
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
                 ·
-                <a href="#">AIESEC</a>
+                <a href="index.html">AIESEC</a>
                 ·
-                <a href="#services">專案說明</a>
+                <a href="OutGoing%20Volunnter.html">海外成長</a>
                 ·
-                <a href="indexOGV.html">海外成長</a>
+                <a href="Outgoing%20Talent.html">海外實習</a>
                 ·
-                <a href="#">海外實習</a>
+                <a href="Outgoing%20Entrepreneur.html">海外青創</a> 
                 ·
-                <a href="indexOGE.html">海外青創</a>
+                <a href="Incoming%20Volunteer.html">全球青年在地發展</a>
+                ·
+                <a href="incomingTalent.html">全球人才實習</a>
             </p>
 
-            <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
+
+            <p class="footer-company-name">AIESEC in Taiwan &copy; 2019</p>
         </div>
 
         <div class="footer-center microfont">
@@ -508,7 +511,6 @@
 
 
     </footer>
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
