--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -364,7 +364,7 @@
 
 
     <!--     IGV營隊特點-->
-    <section id="services" class="section-grbacolor why-choose-text">
+   <!--  <section id="services" class="section-grbacolor why-choose-text">
         <div class="container-igv">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -393,7 +393,7 @@
                         <img src="img/igvusp2.png" width="35%" heigh="35%" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
                     <div class="service-box mt-3 mx-auto">
-
+    
                         <h2 class="mb-3">充分的交流互動</h2>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">不死板的活動設計，給予學員最充分的發揮空間；相互支持成長的小隊活動設計，讓遊戲和講座交互貫穿營隊時程表，凝聚團隊且建立更寬廣的人脈網絡。</p>
@@ -412,7 +412,7 @@
             </div>
         </div>
     </section>
-
+     -->
 
 
 
@@ -537,7 +537,7 @@
 
     <!-- The content of your page would go here. -->
 
-    <footer class="footer-distributed" id=contact>
+       <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
@@ -546,18 +546,21 @@
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
                 ·
-                <a href="#">AIESEC</a>
+                <a href="index.html">AIESEC</a>
                 ·
-                <a href="#services">專案說明</a>
+                <a href="OutGoing%20Volunnter.html">海外成長</a>
                 ·
-                <a href="indexOGV.html">海外成長</a>
+                <a href="Outgoing%20Talent.html">海外實習</a>
                 ·
-                <a href="#">海外實習</a>
+                <a href="Outgoing%20Entrepreneur.html">海外青創</a> 
                 ·
-                <a href="indexOGE.html">海外青創</a>
+                <a href="Incoming%20Volunteer.html">全球青年在地發展</a>
+                ·
+                <a href="incomingTalent.html">全球人才實習</a>
             </p>
 
-            <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
+
+            <p class="footer-company-name">AIESEC in Taiwan &copy; 2019</p>
         </div>
 
         <div class="footer-center microfont">
