--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -103,7 +103,7 @@
     </nav>
     <header class="ogelanding text-center text-white d-flex">
         <div class="container my-auto">
-            <div class="row" style="margin-top:6%">
+            <div class="row">
                 <div class="col-lg-12">
                     <h1 class="text-uppercase animated zoomIn header-font fontsize" style="animation-duration: 1s;animation-delay: 0.5s" id="title-oge">
 
